test/library/standard/AutoMath/sqrtnegparam.good
sqrtnegparam.chpl:1: error: sqrt of a negative number -- cast to complex if a complex result is desired
sqrtnegparam.chpl:2: error: sqrt of a negative number -- cast to complex if a complex result is desired
sqrtnegparam.chpl:3: error: sqrt of a negative number -- cast to complex if a complex result is desired
sqrtnegparam.chpl:4: error: sqrt of a negative number -- cast to complex if a complex result is desired
