test/library/standard/AutoMath/sqrtnegparam.chpl
sqrt(-1);
sqrt(-1.0);
sqrt(-1.0:real(64));
sqrt(-1.0:real(32));
